--- a/assets/less/1382.less
+++ b/assets/less/1382.less
@@ -11,13 +11,6 @@
 	.grid(12,8);
 }
 .image-wrap {
-	img {
-		.grid(12,8);
-		.prefix(12,2);
-		.suffix(12,2);
-		margin-top: 1em;
-		margin-bottom: 2em;
-	}
 	&:after {
 		left: 33.333333333%;
 	}
