--- a/assets/less/600.less
+++ b/assets/less/600.less
@@ -16,9 +16,6 @@ html {
 	.prefix(12,0);
 	.suffix(12,0);
 }
-.image-wrap .headline-wrap {
-	.prefix(12,3);
-}
 .image-wrap:after {
 	left: 25%;
 }
